# assembly_knowledge

./: CMakeLists.txt  README.md  grasp_gen.sh  package.xml
assembly_sequences/: assembly_sequence_1.yaml
config/: grasp_options.yaml  grasp_options_middle.yaml
furniture_info/: stefan.yaml  stefan_with_z_info.yaml
furniture_sets/: ikea_stefan.yaml
models/: change_names.sh  compute_to_centroid.py  ikea_parts.yaml
models/assembly_surface/: ikea_stefan_long_assemble_surface.yaml  ikea_stefan_middle_assemble_surface.yaml  ikea_stefan_short_assemble_surface.yaml
models/grasps/: ikea_ikea_stefan_bolt_hip_cont_grasp.yaml  ikea_ikea_stefan_bolt_side_cont_grasp.yaml  ikea_ikea_stefan_bracket_cont_grasp.yaml  ikea_stefan_assembled_jy_cont_grasp.yaml  ikea_stefan_assembled_jy_grasp.yaml  ikea_stefan_bottom_cont_grasp.yaml  ikea_stefan_bottom_grasp.yaml  ikea_stefan_long_cont_grasp.yaml  ikea_stefan_long_grasp.yaml  ikea_stefan_middle_cont_grasp.yaml  ikea_stefan_middle_grasp.yaml  ikea_stefan_pin_cont_grasp.yaml  ikea_stefan_short_cont_grasp.yaml  ikea_stefan_short_grasp.yaml  ikea_stefan_side_left_cont_grasp.yaml  ikea_stefan_side_left_grasp.yaml  ikea_stefan_side_right_cont_grasp.yaml  ikea_stefan_side_right_grasp.yaml  ikea_stefan_without_bottom_cont_grasp.yaml  stefan_bottom_grasp.yaml  stefan_long_part_grasp.yaml  stefan_middle_part_grasp.yaml  stefan_short_part_grasp.yaml  stefan_side_left_part_grasp.yaml
models/meshes/: ikea_stefan_bolt_side.stl  ikea_stefan_bottom.stl  (+18 more)
part_info/: chair_bracket_3.yaml  symmetric_chair_part5_1.yaml
presets/: joints.yaml
(+28 files in other folders)
