<?xml version="1.0"?>
<package format="2">
  <name>assembly_knowledge</name>
  <version>0.1.0</version>
  <description>assembly_knowledge contains assembly model meshes and information</description>
  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>
  <license>BSD</license>

  <author>Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
